--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
     <head>
-        <link href="style.css" type="text/css" rel="stylesheet">    
+        <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <canvas id="paint"></canvas>
-      
+
         <div id="color-selector">
             <div class="marker selected" id="black"></div>
             <div class="marker" id="purple"></div>
@@ -16,9 +16,9 @@
             <div class="marker" id="yellow"></div>
             <div class="marker" id="brown"></div>
         </div>
-
         <script src="event-emitter.js"></script>
         <script src="whiteboard.js"></script>
+        <script src="socket.io/socket.io.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
